# oam-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  OAT.xml  README.md  SECURITY.md  build.sh  init_env.sh  install_bundle.sh  requirements.txt  version.cmake  version.info
cmake/stub/: CMakeLists.txt  h2c.py
src/msaicerr/: CMakeLists.txt  module.mk  msaicerr.py  parse_tiling.py  test_single_op.py
src/msaicerr/ms_interface/: aic_error_info.py  aicore_error_parser.py  collection.py  compile_file.py  constant.py  dsmi_interface.py  dump_data_parser.py  dump_data_pb2.py  golden_op.py  run_dirty_ub.py  tiling_data_parser.py  utils.py
src/msaicerr/ms_interface/ascend950/: ascend950_handler.py  ascend_c_template.py  compile_op.py
src/msaicerr/ms_interface/single_op_test_frame/: __init__.py  single_op_case.py
src/msaicerr/ms_interface/single_op_test_frame/common/: __init__.py  ascend_tbe_op.py  dtype_trans.py  logger.py
src/msaicerr/ms_interface/single_op_test_frame/runtime/: __init__.py  rts_api.py  rts_info.py
src/msaicerr/ms_interface/single_op_test_frame/utils/: __init__.py  file_util.py  op_param_util.py  shape_utils.py
src/msaicerr/proto_parse/: CMakeLists.txt  dump_proto_to_json.cpp  dump_proto_to_json.h
src/msprof/: CMakeLists.txt
src/msprof/collector/: CMakeLists.txt
src/msprof/collector/basic/: CMakeLists.txt
src/msprof/collector/basic/osal/: osal.c  osal.h  osal_include.h  osal_linux.c  osal_linux.h  osal_linux_mem.c  osal_liteos_mem.c  osal_mem.h  osal_thread.c  osal_thread.h
src/msprof/collector/dvvp/: CMakeLists.txt
src/msprof/collector/dvvp/acp/: CMakeLists.txt
src/msprof/collector/dvvp/adprof/: CMakeLists.txt
src/msprof/collector/dvvp/app/: application.cpp  application.h  env_manager.cpp  env_manager.h
src/msprof/collector/dvvp/message/: codec.cpp  codec.h  dispatcher.cpp  dispatcher.h  message.h  prof_params.h
src/msprof/collector/dvvp/msprof/: CMakeLists.txt
src/msprof/collector/dvvp/msprofbin/: CMakeLists.txt
src/msprof/collector/dvvp/msprofiler/: CMakeLists.txt  prof_acl_api.cpp  prof_acl_core.cpp  prof_acl_core.h  prof_acl_intf.h  prof_api_common.cpp  prof_api_common.h  prof_api_runtime.cpp  prof_api_runtime.h  prof_ge_core.cpp  prof_ge_core.h
src/msprof/collector/dvvp/profapi/: CMakeLists.txt
src/msprof/collector/dvvp/profhal/: CMakeLists.txt
src/msprof/collector/dvvp/proto/: profiler.proto
src/msprof/collector/dvvp/transport/: file_ageing.cpp  file_ageing.h  file_ageing_closed.cpp  file_ageing_open.cpp  file_interface.cpp  file_interface.h  file_manager.cpp  file_manager.h  file_slice.cpp  file_slice.h  file_transport.cpp  file_transport.h  hash_data.cpp  hash_data.h  parser_transport.cpp  parser_transport.h  pipe_transport.cpp  pipe_transport.h  prof_channel.cpp  prof_channel.h  receiver.cpp  receiver.h  transport.h  uploader.cpp  uploader.h  uploader_mgr.cpp  uploader_mgr.h
src/msprof/inc/toolchain/: aprof_pub.h  devprof_pub.h  prof_acl_api.h  prof_api.h  prof_common.h  prof_data_config.h  prof_dev_api.h  prof_engine.h  prof_reporter.h
src/operator_cmp/: CMakeLists.txt
test/: CMakeLists.txt
test/st/asys/: CMakeLists.txt
test/st/asys/data/asys_test_dir/: test.bash  test_launch_error_task.bash
test/st/asys/data/coredump/: core-coredump-8032-1717033942.txt  core-coredump-8032-1717033943_error.txt  core-coredump-8032-1717033944_error.txt  coredump_reg_info.txt  coretrace_log.log-daemon.1749023973.11  stackcore_tracer_6_570350_atrace_test_20241010031221412850.txt  stackcore_tracer_atrace_test_40945_1716517732910.txt
test/st/asys/data/scripts/: msnpureport
test/st/asys/data/vendors/: config.ini
test/st/asys/testcase/: __init__.py  conftest.py  test_analyze.py  test_asys.py  test_collect.py  test_collect_rc.py  test_common.py  test_config.py  test_config_ascend950.py  test_diagnose.py  test_diagnose_ascend950.py  test_health.py  test_help.py  test_info.py  test_info_ascend950.py  test_launch.py  test_launch_rc.py
test/st/msaicerr/testcase/: conftest.py  test_aic_error_info_st.py  test_aicore_error_parse_st.py  test_ascend_tbe_op_st.py  test_collection_st.py  test_compile_op_ascend950.py  test_dump_data_st.py  test_golden_op.py  test_golden_op_ascend950.py  test_msaicerr_st.py  test_rts_api.py  test_single_op_case_st.py  test_single_op_case_st_ascend950.py  test_utils_st.py
test/ut/asys/: CMakeLists.txt
test/ut/asys/data/coredump/: core-coredump-8032-1717033942.txt  core-coredump-8032-1717033943_error.txt  coredump_reg_info.txt  coretrace_1738757896_22994_test  coretrace_error  stackcore_tracer_atrace_test_40945_1716517732910.txt
test/ut/asys/data/scripts/: msnpureport
test/ut/asys/testcase/: conftest.py  test_asys.py
test/ut/asys/testcase/analyze/: __init__.py  test_asys_analyze.py
test/ut/asys/testcase/cmdline/: test_arg_checker.py  test_cmd_parser.py
test/ut/asys/testcase/collect/: test_asys_collect.py
test/ut/asys/testcase/common/: test_cmd_run.py  test_compress.py  test_const.py  test_device.py  test_device_ascend950.py  test_file_operate.py  test_log.py  (+3 more)
test/ut/msaicerr/testcase/: conftest.py  test_aic_error_info_ut.py  test_aicore_error_parser_ut.py  test_collection_ut.py  test_compile_op_ascend950.py  test_dsmi_interface.py  test_dump_data_ut.py  test_handler_ascend950.py  test_msaicerr_ut.py  test_rts_api.py  test_single_op_case_ut.py  test_single_op_case_ut_ascend950.py  test_util_load_handler.py  test_utils_ut.py
test/ut/msprof/msprofbin/: CMakeLists.txt
test/ut/msprof/stub/: adx_prof_api_stub.cpp  c_base_error_manager_stub.cpp  collect_io_server_stub.cpp  common-utils-stub.cpp  common-utils-stub.h  devdrv_runtime_api_stub.cpp  devdrv_runtime_api_stub.h  drv_stub.cpp  error_manager_stub.cpp  error_manager_stub2.cpp  hdc-api-stub.cpp  hdc-api-stub.h  hdc-log-stub.cpp  hdc-log-stub.h  ide-cmd-stub.cpp  ide-cmd-stub.h  ide-common-util-stub.cpp  ide-common-util-stub.h  ide_hdc_stub.cc  mmpa_stub.cpp  mmpa_stub.h  prof_api_stub.cpp  profile_drv_user_stub.cpp  profile_drv_user_stub.h  sec_stub.cpp  slog_stub.cc  tsd_stub.cpp  tsd_stub.h
(+674 files in other folders)
